[gd_scene load_steps=2 format=2]

[ext_resource path="res://test/graph-edit.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 92.0
margin_top = 6.0
margin_right = 92.0
margin_bottom = 6.0
use_snap = false
minimap_enabled = false
script = ExtResource( 1 )

[node name="GraphNode" type="GraphNode" parent="GraphEdit"]
margin_left = 20.0
margin_top = 100.0
margin_right = 170.0
margin_bottom = 167.0
mouse_filter = 1
title = "Ray_right"
offset = Vector2( 20, 100 )
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="GraphEdit/GraphNode"]
margin_left = 16.0
margin_top = 24.0
margin_right = 134.0
margin_bottom = 38.0
text = "0.59"

[node name="GraphNode4" type="GraphNode" parent="GraphEdit"]
margin_left = 20.0
margin_top = 400.0
margin_right = 170.0
margin_bottom = 467.0
mouse_filter = 1
title = "Ray_right"
offset = Vector2( 20, 400 )
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="GraphEdit/GraphNode4"]
margin_left = 16.0
margin_top = 24.0
margin_right = 134.0
margin_bottom = 38.0
text = "0.59"

[node name="GraphNode2" type="GraphNode" parent="GraphEdit"]
margin_left = 300.0
margin_top = 100.0
margin_right = 453.0
margin_bottom = 212.0
mouse_filter = 1
title = "Hidden_node"
offset = Vector2( 300, 100 )
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="GraphEdit/GraphNode2"]
margin_left = 16.0
margin_top = 24.0
margin_right = 137.0
margin_bottom = 38.0
text = "0.11"

[node name="GraphNode3" type="GraphNode" parent="GraphEdit"]
margin_left = 300.0
margin_top = 500.0
margin_right = 453.0
margin_bottom = 612.0
mouse_filter = 1
title = "Hidden_node"
offset = Vector2( 300, 500 )
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="GraphEdit/GraphNode3"]
margin_left = 16.0
margin_top = 24.0
margin_right = 137.0
margin_bottom = 38.0
text = "0.11"

[node name="GraphNode5" type="GraphNode" parent="GraphEdit"]
margin_left = 180.0
margin_top = 250.0
margin_right = 256.0
margin_bottom = 306.0
mouse_filter = 1
title = "link"
offset = Vector2( 180, 250 )
comment = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="GraphEdit/GraphNode5"]
margin_left = 16.0
margin_top = 24.0
margin_right = 60.0
margin_bottom = 38.0
text = "1.2"
